--- a/d1-master/Project_Economic/src/main/resources/templates/home/my-account.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/my-account.html
@@ -43,7 +43,7 @@
                     <div class="col-md-3">
                         <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
                             <a class="nav-link active" id="orders-nav" data-toggle="pill" href="#orders-tab" role="tab"><i class="fa fa-shopping-bag"></i>Đơn hàng</a>
-                            <a class="nav-link " id="payment-nav" data-toggle="pill" href="#payment-tab" role="tab"><i class="fa fa-heart"></i>Sản phẩm yêu thích</a>
+<!--                            <a class="nav-link " id="payment-nav" data-toggle="pill" href="#payment-tab" role="tab"><i class="fa fa-heart"></i>Sản phẩm yêu thích</a>-->
                             <a class="nav-link" id="account-nav" data-toggle="pill" href="#account-tab" role="tab"><i class="fa fa-user"></i>Thông tin tài khoản</a>
                         </div>
                     </div>
