--- a/d1-master/Project_Economic/src/main/resources/templates/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
     <style>
         body {
-
-            background-image: url('/images/3.jpg');
+            background-image: url('/images/3.png');
             background-size: cover;
             background-position: center;
             height: 100vh;
