--- a/d1-master/Project_Economic/src/main/resources/templates/register/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/register/index.html
@@ -38,6 +38,9 @@
               <div th:if="${error}" th:class="align-items-center">
                 <h6 th:text="${error}" th:class="text-danger"></h6>
               </div>
+              <div th:if="${wrongpass}" th:class="align-items-center">
+                <h6 th:text="${wrongpass}" th:class="text-danger"></h6>
+              </div>
             <form action="#" method="post" th:action="@{/api/users/register}" th:object="${userEntity}">
               <div class="form-group first mb-2">
                 <input type="text" class="form-control" id="username" placeholder="Tài khoản" th:field="*{username}">
@@ -45,10 +48,12 @@
               </div>
               <div class="form-group first mb-2">
                 <input type="email" class="form-control" id="email" placeholder="Email" th:field="*{email}">
-
               </div>
               <div class="form-group last mb-2">
                 <input type="password" class="form-control" id="password" placeholder="Mật khẩu" th:field="*{password}">
+              </div>
+              <div class="form-group last mb-2">
+                <input type="password" class="form-control" id="reset-password" name="reset-password" placeholder="Nhập lại mật khẩu" required>
               </div>
 <!--              <div class="d-flex mb-5 align-items-center">-->
 <!--                <label class="control control&#45;&#45;checkbox mb-0"><span class="caption">Remember me</span>-->
